<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4472C4"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/txtViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/txtViewInstructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txtViewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewInstructions"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/txtViewCategories"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPush"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCategoryNext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:text="@string/btnPush" />

    <TextView
        android:id="@+id/Category_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPush"
        android:layout_alignBottom="@+id/btnPush"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_toEndOf="@+id/btnPush"
        android:layout_toRightOf="@+id/btnPush"
        android:text="@string/txtViewCategory_Result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnCategoryNext"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Category_Result"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Category_Result"
        android:layout_marginBottom="37dp"
        android:text="@string/btnCategoryNext" />

</RelativeLayout>